[package]
name = "extractor"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
askalono = { version = "0.4.6", optional = true }
derive_more = "0.99.17"
env_logger = "0.10.0"
futures = "0.3.25"
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["json", "stream"] }
roblox_version_archive = "1.0.4"
semver = { version = "1.0.16", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.1", features = ["full"] }
toml = "0.5.10"
walkdir = { version = "2.3.2", optional = true }
zip = "0.6.3"

[features]
default = ["check-licenses"]
check-licenses = ["askalono", "walkdir"]
